# test-webmark

./: .gitignore  README.md  autocannon.dockerfile  babel.config.js  build-html  build-html.js  config  config.js  database.sql  docker-compose.yml  example.html  package-lock.json  package.json  postgres.dockerfile  remote-setup.sh  run-all  run-configuration  run-configuration.js  run-test  run.js  shutdown  start-configuration  start-configuration.sh  start-database  tests
configurations/crystal-raze/: Dockerfile  app.cr  cluster.sh  shard.yml
configurations/crystal-stdlib/: Dockerfile  app.cr  cluster.sh  shard.yml
configurations/csharp-core/: Dockerfile  Program.cs  Startup.cs  WebmarkController.cs  appsettings.json  aspnetapp.csproj
configurations/go-fasthttp/: Dockerfile  go.mod  go.sum  main.go
configurations/go-fiber/: Dockerfile  go.mod  main.go  (+1 more)
configurations/rust-actix/: Cargo.toml  Dockerfile  README.txt  sqlx-data.json
configurations/rust-actix/scripts/: sqlx
configurations/rust-actix/src/: database.rs  errors.rs  main.rs
configurations/rust-actix/src/services/: mod.rs  webmark.rs
database/: Dockerfile  database.sql
docker/: pool.d.ts
src/: app.ts  database.ts  docker-compose.nodb.yml  docker-compose.yml  run-configuration.ts  setup.js  start-configuration.sh  tests.ts  tsconfig.json
tests/: _warmup.sh  all-fortunes.sh  helloworld.sh  primes.sh
utils/: digitalocean-destroy  digitalocean-setup  digitalocean-setup-3  digitalocean-userdata.sh
web/: Results.ts  ambient.d.ts  index.css  index.tsx  tsconfig.json  webpack.config.js
(+48 files in other folders)
