[package]
name = "app"
version = "0.0.1"
edition = "2018"

[dependencies]
bytes = "0.5.3"
actix = "0.10.0"
actix-web = { version = "3.1.0", default-features = false }
actix-http = { version = "2.2.1", default-features = false }
actix-rt = "1.1.1"
actix-codec = "0.3.0"
actix-server = "1.0.4"
actix-service = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.1"
tokio-postgres = { git = "https://github.com/fafhrd91/rust-postgres.git" }
socket2 = { version = "0.4.0", features = ["all"] }
