[package]
name = "app"
version = "0.0.1"
edition = "2018"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = "4.0.1"
actix-http = "3.0.4"
futures-util = "0.3.21"
serde = "1.0.137"
anyhow = "1.0.57"
serde_json = "1.0.81"
env_logger = "0.9.0"
sqlx = { version = "0.5.13", features = [ "offline", "runtime-actix-rustls", "postgres" ] }
listenfd = "1.0.0"
log = "0.4.17"
derive_more = "0.99.17"
